style.css
/* ... */
#wordpress-comments .comment-list li.comment {
    padding: 20px 10px;
    background-color: rgba(255, 255, 255, 0.59);
    border-radius: 10px;
    list-style-type: none !important;
}
#wordpress-comments .children li {
    margin: 20px 0px;
}
#wordpress-comments label {
    color: #2e3641;
}
/**
* Widget Area - under post sidebar
*/
.underpostWidgetArea {
    padding: 1px 12px;
    margin: 14px 12px;
    background-color: rgba(255, 255, 255, 0.65);
    border-radius: 10px;
}

/**
* Widget Area - Every Page Top Bar Callouts
*/
.everypageTopWidgetArea {
    width: 100%;
}

/**
* Widget Area - Inner Content Main Sidebar
*/
.innerContentMainSidebar {
    padding: 1px 12px;
    margin: 14px 12px;
    background-color: rgba(255, 255, 255, 0.65);
    border-radius: 10px;
}

/**
* Preloader and Loading Animations
*/
.preloaderWrapper {
    display: block;
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: 999;
    cursor: not-allowed;
    background-color: rgba(0, 0, 0, 0.90);
}
.preloaderAnimationWrapper {
    position: relative;
    width: 100%;
    height: 100%;
}
.preloaderAnimation i {
    font-size: 18em;
    color: white;
}
.preloaderAnimation img {
    width: 100%;
}
.rotating {
    animation: rotating 2s infinite linear;
    -webkit-animation: rotating 2s infinite linear;
}
@keyframes rotating {
    0% {
        transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
    }
    20% {
        transform: rotate(5deg);
        -webkit-transform: rotate(5deg);
    }
    40% {
        transform: rotate(10deg);
        -webkit-transform: rotate(10deg);
    }
    60% {
        transform: rotate(40deg);
        -webkit-transform: rotate(40deg);
    }
    80% {
        transform: rotate(100deg);
        -webkit-transform: rotate(100deg);
    }
    100% {
        transform: rotate(359deg);
        -webkit-transform: rotate(359deg);
    }
}


#main > article, #main .articleWrapper > article {
    background: rgba(255, 255, 255, 0.45);
    padding: 10px;
    border-radius: 8px;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
}

/**
* Lightboxes
*/
.fancybox-image, .fancybox-spaceball {
    padding: 30px;
}

/**
* Business Card - Materialize Styled
*/
.businessCard {
    /* width: 80%; */
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
    font-family: 'lato','sans-serif';
    font-size: 1.1em;
    position: relative;
}
.businessCard .textWrapper a {
    text-underline-offset: 2px;
    text-decoration: underline;
}
.modal-content .businessCard {
    width: 80%;
}
.businessCard .fullName {
    font-weight: bolder;
    font-size: 2em;
}
.businessCard .jobTitle {
    font-style: italic;
    font-size: 1.3em;
}
.businessCard .profilePictureWrapper {
    overflow: hidden;
    border-radius: 50%;
    padding: 10px !important;
    border: 4px solid black;
    margin-top: 38%;
    background-color: white;
}
.businessCard .linksAndDetailsSection .rowJoinerWrapper {
    width: 34px;
    height: 15px;
    padding-left: 0.75rem;
    min-height: 1px;
    position: relative;
    text-align: center;
    float: left;
    margin-bottom: -1px;
    margin-top: -1px;
}
.businessCard .linksAndDetailsSection .rowJoiner {
    width: 50%;
    height: 100%;
    margin-left: auto;
    border-left: 1px solid black;
    border-right: 1px solid black;
}
.businessCard .linkedInURL i, .businessCard .codingProfileURL i, .businessCard .twitterUrl i {
    position: absolute;
    width: 24px;
    height: 24px;
    text-align: center;
    font-size: large;
}
.businessCard .linksAndDetailsSection i.fa {
    font-size: x-large;
}
.businessCard .linksAndDetailsSection .iconWrapper {
    display: inline-block;
    width: 34px;
    height: 31px;
    padding-top: 3px;
    padding-left: 4px;
    margin-right: 10px;
    border-radius: 8px;
    border: 1px solid black;
    
}
.businessCard .linksAndDetailsSection .textWrapper {
    display: inline-block;
}
.businessCard .iconsSolidBackground {
    background-color: black;
    color: white !important;
}
.businessCard .diagonals {
    position: absolute;
    height: 200%;
    width: 14px;
    top: -50%;
    right: 222px;
    border-left: 4px solid red;
    border-right: 4px solid red;
    transform: rotateZ(24deg);
    background-color: #38013d;
}
.homepageUpper .businessCard .diagonals {
    display: none;
}
.businessCard > .card-panel {
    position: relative;
    background-color: unset;
}
.businessCard .background {
    width: 100%;
    position: absolute;
    height: 100%;
    top: 0px;
    left: 0px;
    overflow: hidden;
    background-color: white;
}
.businessCard .ageWrapper {
    margin-top: 4px;
    font-size: medium;
    font-style: italic;
}
.businessCard .linksAndDetailsSection {
    min-height: 88px;
}
.businessCard .fixedUpperRightToolbar {
    position: absolute;
    right: 10px;
    top: 10px;
    display: none;
}
.modal-content .businessCard .fixedUpperRightToolbar {
    display: inherit;
}
@media (max-width: 600px) {
    .businessCard .profilePictureWrapper {
        margin-top: 0px;
    }
}
/**
* Modal version of business card
*/
.businessCardMaterializeModal {
    top: 10% !important;
    background-color: unset !important;
    max-width: 600px;
    width: 94% !important;
    min-height: 450px;
    overflow-y: hidden;
    display: none;
    box-shadow: unset !important;
}
.businessCardMaterializeModal .businessCard {
    width: 100%;
    margin-top: 0px;
    /* min-width: 500px; */
}
.businessCardMaterializeModal .card-panel {
    margin: unset !important;
}
.businessCardMaterializeModal .modal-content {
    padding: 0px;
}
.businessCardMaterializeModal .aboutMeCard {
    margin-bottom: 16px !important;
    padding: 12px 14px 5px 14px;
}
.businessCard .modal-close {
    color: grey;
}

/**
* About Me Card
*/
.aboutMeCard .title {
    width: 100%;
    text-align: center;
    font-size: 2rem;
    font-style: italic;
}
/* ... */

